# aimbot-artinx2021

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: camera_params.xml
docs/: acquire_cam_image.md  cam_driver_install.md  camera_calibration.md  run_detection_algorithm.md  serial_communication.md
inc/Aimbot/: AngleSolver.h  Armor.h  General.h
inc/AsyncSerial/: AsyncSerial.h  BufferedAsyncSerial.h
inc/GxCamera/: GxCamera.hpp
inc/PacketManager/: Crc.hpp  HashTable.hpp  HostPacket.hpp  Math.hpp  MemoryStream.hpp  Observer.hpp  Packet.hpp  SerialPacketManager.hpp  Stream.hpp  Time.hpp  math_first_order_filter.h
inc/SerialPort/: SerialPort.hpp
inc/ThreadSafe/: ThreadSafeQueue.hpp
inc/utils/: Timer.hpp
sample/: CMakeLists.txt  SerialTest.cc  ShowCaptureImage.cc  SysAllTest.cc  TestDetection.cc
src/: CMakeLists.txt
src/Aimbot/: AngleSolver.cc  ArmorBox.cc  ArmorDetector.cc  ArmorNumClassifier.cc  CMakeLists.txt  LightBar.cc  findLights.cc  matchArmors.cc
src/AsyncSerial/: AsyncSerial.cc  BufferedAsyncSerial.cc  CMakeLists.txt
src/GxCamera/: CMakeLists.txt  GxCamera.cc
src/PacketManager/: CMakeLists.txt  Crc.cpp  HostPacket.cpp  Math.cpp  MemoryStream.cpp  Packet.cpp  SerialPacketManager.cpp  Time.cpp
src/SerialPort/: CMakeLists.txt  SerialPort.cpp
src/utils/: CMakeLists.txt  Timer.cc
